Changed to dark mode and fixed some links

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -1,13 +1,20 @@
-
+:root {
+  --first-color: #B76D68;
+  --dark-color: #121420;
+  --dark-color-alt: #2C2B3C;
+  --white-color: #E6E7E9;
+  --white-color-alt: #8b909b;
+}
 /* Icons */
-
 .right-arrow-icon {
+  filter: invert(99%) sepia(1%) saturate(277%) hue-rotate(181deg) brightness(94%) contrast(94%);
   width: 16px;
   height: 16px;
   margin-top: 1px;
 }
 
 .footer-icon {
+  filter: invert(99%) sepia(1%) saturate(277%) hue-rotate(181deg) brightness(94%) contrast(94%);
   width: 20px;
   height: 20px;
 }
@@ -38,7 +45,7 @@ a.icon-link:hover {
 }
 
 .nav-title-link {
-  color: black;
+  color: var(--white-color);
   text-decoration: none;
 }
 
@@ -50,7 +57,7 @@ a.icon-link:hover {
 @media only screen and (max-width: 800px) {
   .navbar {
     padding: 20px 20px;
-    background-color: white
+    background-color: var(--dark-color-alt)
   }
 }
 
@@ -59,9 +66,9 @@ a.icon-link:hover {
 
 a.button {
   padding: 8px 16px;
-  border: 3px solid #141414;
+  border: 3px solid var(--white-color-alt);
   border-radius: 50px;
-  color: black;
+  color: var(--white-color);
   text-decoration: none;
   width: fit-content;
   display: flex;
@@ -90,7 +97,7 @@ a.button:hover {
 /* Link Styling */
 a.no-underline {
   text-decoration: none;
-  color: black
+  color: var(--white-color-alt)
 }
 
 a.no-underline:hover {
